samples/_failures_safe/1761348949_507d78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_305ce7ee.c: In function ‘tokenize’:
./samples/SAFE/__tmp_305ce7ee.c:154:9: error: expected declaration or statement at end of input
  154 |         column += advance;
      |         ^~~~~~
./samples/SAFE/__tmp_305ce7ee.c:154:9: error: expected declaration or statement at end of input
